--- a/src/main/resources/css/table-view.css
+++ b/src/main/resources/css/table-view.css
@@ -1,3 +1,35 @@
-.table-header {
+.table-view .column-header {
     -fx-background-color: #E4EEFF;
+    -fx-text-fill: white;
+    -fx-font-weight: bold;
+}
+
+.button.edit {
+    -fx-background-color: #4CAF50;
+    -fx-text-fill: white;
+    -fx-font-size: 14px;
+    -fx-font-weight: bold;
+    -fx-border-radius: 5px;
+    -fx-background-radius: 5px;
+    -fx-padding: 10px 20px;
+    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.3), 5, 0, 0, 2);
+}
+
+.button.edit:hover {
+    -fx-background-color: #45a049;
+}
+
+.button.delete {
+    -fx-background-color: #f44336;
+    -fx-text-fill: white;
+    -fx-font-size: 14px;
+    -fx-font-weight: bold;
+    -fx-border-radius: 5px;
+    -fx-background-radius: 5px;
+    -fx-padding: 10px 20px;
+    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.3), 5, 0, 0, 2);
+}
+
+.button.delete:hover {
+    -fx-background-color: #e53935;
 }
