--- a/src/main/resources/views/pages/adminta/dashboard.fxml
+++ b/src/main/resources/views/pages/adminta/dashboard.fxml
@@ -116,25 +116,25 @@
                <Insets left="20.0" right="20.0" top="30.0" />
             </VBox.margin>
          </HBox>
-         <TableView fx:id="tableViewBerkasPengajuan" prefWidth="662.0" stylesheets="@../../../css/table-view.css">
-           <columns>
-               <TableColumn fx:id="noCol" prefWidth="75.0" text="No" />
-             <TableColumn fx:id="nimCol" prefWidth="75.0" text="NIM" />
-             <TableColumn fx:id="mahasiswaCol" prefWidth="75.0" text="Mahasiswa" />
-               <TableColumn fx:id="statusCol" prefWidth="75.0" sortable="false" text="Status" />
-               <TableColumn fx:id="tanggalCol" prefWidth="75.0" text="Tanggal pengajuan" />
-               <TableColumn fx:id="actionCol" editable="false" prefWidth="75.0" sortable="false" text="Aksi" />
-           </columns>
-            <opaqueInsets>
-               <Insets />
-            </opaqueInsets>
-            <VBox.margin>
-               <Insets bottom="20.0" left="20.0" right="20.0" />
-            </VBox.margin>
-            <columnResizePolicy>
-               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-            </columnResizePolicy>
-         </TableView>
+            <TableView fx:id="tableViewBerkasPengajuan" stylesheets="@../../../css/table-view.css" VBox.vgrow="ALWAYS">
+                <columns>
+                    <TableColumn fx:id="noCol" editable="false" prefWidth="75.0" text="No" />
+                    <TableColumn fx:id="nimCol" editable="false" prefWidth="90.39996337890625" text="NIM" />
+                    <TableColumn fx:id="mahasiswaCol" editable="false" prefWidth="136.00003051757812" text="Mahasiswa" />
+                    <TableColumn fx:id="statusCol" editable="false" prefWidth="136.00003051757812" sortable="false" text="Status" />
+                    <TableColumn fx:id="tanggalCol" editable="false" minWidth="-1.0" prefWidth="-1.0" text="Tanggal Pengajuan" />
+                    <TableColumn fx:id="actionCol" editable="false" prefWidth="64.0" sortable="false" text="Aksi" />
+                </columns>
+                <opaqueInsets>
+                    <Insets />
+                </opaqueInsets>
+                <VBox.margin>
+                    <Insets bottom="20.0" left="20.0" right="20.0" top="10.0" />
+                </VBox.margin>
+                <columnResizePolicy>
+                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                </columnResizePolicy>
+            </TableView>
         </children>
     </VBox>
 </HBox>
