--- a/src/main/resources/css/global.css
+++ b/src/main/resources/css/global.css
@@ -1,31 +1,7 @@
-@font-face {
-    font-family: "Reddit Sans";
-    src: url("/../font/Reddit_Sans/Regular.ttf");
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "Reddit Sans";
-    src: url("/../fonts/RedditSans-Bold.ttf");
-    font-weight: bold;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "Reddit Sans";
-    src: url("/../fonts/RedditSans-Italic.ttf");
-    font-weight: normal;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: "Reddit Sans";
-    src: url("/../fonts/RedditSans-BoldItalic.ttf");
-    font-weight: bold;
-    font-style: italic;
-}
-
 .root {
     -fx-font-family: "Reddit Sans";
+}
+
+.button {
+    -fx-cursor: hand;
 }
