--- a/src/main/resources/views/components/adminprodi/sidebar.fxml
+++ b/src/main/resources/views/components/adminprodi/sidebar.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox fx:id="sidebarContainer" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="700.0" prefWidth="300.0" style="-fx-background-color: #052C65;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.pages.admin.prodi.SidebarProdiController">
+<VBox fx:id="sidebarContainer" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="700.0" prefWidth="300.0" style="-fx-background-color: #052C65;" stylesheets="@../../../css/sidebar.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.components.SidebarProdiController">
     <children>
         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
             <children>
@@ -28,35 +28,35 @@
             <Insets right="25.0" />
          </padding>
         </HBox>
-        <Button fx:id="btnDashboard" alignment="TOP_LEFT" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#btnDashboardOnClicked" style="-fx-background-color: #052C65;" text="Dashboard" textFill="WHITE">
+        <Button fx:id="btnDashboard" alignment="TOP_LEFT" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#btnDashboardOnClicked" styleClass="button-nav" text="Dashboard" textFill="WHITE">
             <font>
                 <Font name="System Bold" size="14.0" />
             </font>
             <padding>
-                <Insets left="50.0" />
+                <Insets bottom="15.0" left="50.0" top="15.0" />
             </padding>
             <VBox.margin>
                 <Insets bottom="10.0" top="10.0" />
             </VBox.margin>
         </Button>
-        <Button fx:id="btnRequestVerification" alignment="TOP_LEFT" layoutX="10.0" layoutY="273.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#btnRequestVerificationOnClicked" style="-fx-background-color: #052C65;" text="Permintaan Verifikasi" textFill="WHITE">
+        <Button fx:id="btnRequestVerification" alignment="TOP_LEFT" layoutX="10.0" layoutY="273.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#btnRequestVerificationOnClicked" styleClass="button-nav" text="Permintaan Verifikasi" textFill="WHITE">
             <font>
                 <Font name="System Bold" size="14.0" />
             </font>
             <padding>
-                <Insets left="50.0" />
+                <Insets bottom="15.0" left="50.0" top="15.0" />
             </padding>
             <VBox.margin>
                 <Insets bottom="10.0" top="10.0" />
             </VBox.margin>
         </Button>
         <Region prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS" />
-        <Button fx:id="btnLogout" alignment="BOTTOM_LEFT" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#btnLogoutOnClicked" style="-fx-background-color: #052C65;" text="Keluar" textFill="WHITE" VBox.vgrow="ALWAYS">
+        <Button fx:id="btnLogout" alignment="BOTTOM_LEFT" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#btnLogoutOnClicked" styleClass="button-nav" text="Keluar" textFill="WHITE" VBox.vgrow="ALWAYS">
             <font>
                 <Font name="Reddit Sans Bold" size="14.0" />
             </font>
             <padding>
-                <Insets left="50.0" />
+                <Insets bottom="20.0" left="50.0" top="20.0" />
             </padding>
             <graphic>
                 <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
