--- a/src/main/resources/views/pages/adminprodi/dashboard.fxml
+++ b/src/main/resources/views/pages/adminprodi/dashboard.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="700.0" minWidth="-Infinity" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.pages.admin.prodi.DashboardController">
+<HBox fx:id="dashboardContainer" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="700.0" minWidth="-Infinity" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.pages.admin.prodi.DashboardController">
     <fx:include source="../../components/adminprodi/sidebar.fxml" />
     <VBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="700.0" HBox.hgrow="ALWAYS">
         <children>
@@ -120,7 +120,7 @@
                </HBox>
             </children>
          </HBox>
-         <TableView prefHeight="310.0" prefWidth="662.0">
+         <TableView fx:id="tableViewBerkasPengajuan" prefHeight="310.0" prefWidth="662.0">
            <columns>
                <TableColumn prefWidth="75.0" text="No" />
              <TableColumn prefWidth="75.0" text="NIM" />
