reorganize project structure: make java controllers structure follow views component

--- a/src/main/resources/views/pages/admin/jurusan/kelola-template-surat.fxml
+++ b/src/main/resources/views/pages/admin/jurusan/kelola-template-surat.fxml
@@ -7,9 +7,9 @@
 <?import javafx.scene.text.*?>
 
 <HBox fx:id="viewKelolaTemplateSurat" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="700.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.pages.admin.jurusan.KelolaTemplateSuratController">
-    <fx:include source="../../components/adminjurusan/sidebar.fxml" />
+    <fx:include source="../../../components/admin/jurusan/sidebar.fxml" />
     <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="700.0" HBox.hgrow="ALWAYS">
-        <fx:include source="../../components/admin/topbar.fxml" />
+        <fx:include source="../../../components/admin/topbar.fxml" />
       <VBox prefHeight="200.0" prefWidth="100.0">
          <children>
             <Label text="Daftar Template Surat">
@@ -24,7 +24,7 @@
                <graphic>
                   <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../../../icons/plus-square.png" />
+                        <Image url="@../../../../icons/plus-square.png" />
                      </image>
                   </ImageView>
                </graphic>
