--- a/src/main/resources/views/pages/admin/prodi/dashboard.fxml
+++ b/src/main/resources/views/pages/admin/prodi/dashboard.fxml
@@ -8,11 +8,11 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<HBox fx:id="dashboardContainer" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="700.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.pages.admin.ta.DashboardController">
-    <fx:include source="../../components/adminta/sidebar.fxml" />
+<HBox fx:id="dashboardContainer" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="700.0" minWidth="-Infinity" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.pages.admin.prodi.DashboardController">
+    <fx:include source="../../../components/admin/prodi/sidebar.fxml" />
     <VBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="700.0" HBox.hgrow="ALWAYS">
         <children>
-            <fx:include source="../../components/admin/topbar.fxml" />
+            <fx:include source="../../../components/admin/topbar.fxml" />
             <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="81.0" prefWidth="661.0">
                 <children>
                     <Label prefHeight="67.0" prefWidth="295.0" text="Dashboard" textFill="#052c65">
@@ -25,7 +25,7 @@
                     <Insets left="20.0" right="20.0" top="20.0" />
                 </VBox.margin>
             </VBox>
-         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: E4EEFF; -fx-background-radius: 6;">
+         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="40.0" style="-fx-background-color: E4EEFF; -fx-background-radius: 6;">
             <VBox.margin>
                <Insets left="20.0" right="20.0" />
             </VBox.margin>
@@ -34,13 +34,13 @@
                   <children>
                      <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                         <image>
-                           <Image url="@../../../img/arrow-down-circle.png" />
+                           <Image url="@../../../../img/arrow-down-circle.png" />
                         </image>
                      </ImageView>
                      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                         <children>
                            <Label text="Permintaan" textFill="#052c65" />
-                           <Label fx:id="totalRequest" text="175" textFill="#052c65">
+                           <Label fx:id="PengajuanProdi" text="175" textFill="#052c65">
                               <font>
                                  <Font name="Reddit Sans Black" size="40.0" />
                               </font>
@@ -53,13 +53,13 @@
                   <children>
                      <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                         <image>
-                           <Image url="@../../../img/check-circle.png" />
+                           <Image url="@../../../../img/check-circle.png" />
                         </image>
                      </ImageView>
                      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                         <children>
                            <Label text="Disetujui" textFill="#052c65" />
-                           <Label fx:id="totalApproved" text="123" textFill="#052c65">
+                           <Label fx:id="ProdiVerif" text="123" textFill="#052c65">
                               <font>
                                  <Font name="Reddit Sans Black" size="40.0" />
                               </font>
@@ -72,13 +72,13 @@
                   <children>
                      <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                         <image>
-                           <Image url="@../../../img/arrow-up-circle.png" />
+                           <Image url="@../../../../img/arrow-up-circle.png" />
                         </image>
                      </ImageView>
                      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                         <children>
                            <Label text="Ditolak" textFill="#052c65" />
-                           <Label fx:id="totalRejected" text="52" textFill="#052c65">
+                           <Label fx:id="ProdiDitolak" text="52" textFill="#052c65">
                               <font>
                                  <Font name="Reddit Sans Black" size="40.0" />
                               </font>
@@ -97,44 +97,49 @@
             </effect>
          </HBox>
          <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="200.0">
-            <children>
-               <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
-                  <image>
-                     <Image url="@../../../img/arrow-down-left-square.png" />
-                  </image>
-                  <HBox.margin>
-                     <Insets right="20.0" />
-                  </HBox.margin>
-               </ImageView>
-               <Label text="Aktivitas Terbaru">
-                  <font>
-                     <Font name="Reddit Sans Black" size="18.0" />
-                  </font>
-               </Label>
-            </children>
             <VBox.margin>
                <Insets left="20.0" right="20.0" top="30.0" />
             </VBox.margin>
+            <children>
+               <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="286.0">
+                  <children>
+                     <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                           <Image url="@../../../../img/arrow-down-left-square.png" />
+                        </image>
+                        <HBox.margin>
+                           <Insets right="20.0" />
+                        </HBox.margin>
+                     </ImageView>
+                     <Label text="Aktivitas Terbaru">
+                        <font>
+                           <Font name="Reddit Sans Black" size="24.0" />
+                        </font>
+                     </Label>
+                  </children>
+               </HBox>
+            </children>
          </HBox>
-            <TableView fx:id="tableViewBerkasPengajuan" stylesheets="@../../../css/table-view.css" VBox.vgrow="ALWAYS">
-                <columns>
-                    <TableColumn fx:id="noCol" editable="false" prefWidth="75.0" text="No" />
-                    <TableColumn fx:id="nimCol" editable="false" prefWidth="90.39996337890625" text="NIM" />
-                    <TableColumn fx:id="mahasiswaCol" editable="false" prefWidth="136.00003051757812" text="Mahasiswa" />
-                    <TableColumn fx:id="statusCol" editable="false" prefWidth="136.00003051757812" sortable="false" text="Status" />
-                    <TableColumn fx:id="tanggalCol" editable="false" minWidth="-1.0" prefWidth="-1.0" text="Tanggal Pengajuan" />
-                    <TableColumn fx:id="actionCol" editable="false" prefWidth="64.0" sortable="false" text="Aksi" />
-                </columns>
-                <opaqueInsets>
-                    <Insets />
-                </opaqueInsets>
-                <VBox.margin>
-                    <Insets bottom="20.0" left="20.0" right="20.0" top="10.0" />
-                </VBox.margin>
-                <columnResizePolicy>
-                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                </columnResizePolicy>
-            </TableView>
+         <TableView fx:id="tableViewBerkasPengajuan" prefHeight="310.0" prefWidth="662.0">
+           <columns>
+               <TableColumn prefWidth="75.0" text="No" />
+             <TableColumn prefWidth="75.0" text="NIM" />
+             <TableColumn prefWidth="75.0" text="Mahasiswa" />
+               <TableColumn prefWidth="75.0" text="Status" />
+               <TableColumn prefWidth="75.0" text="Tanggal pengajuan" />
+               <TableColumn prefWidth="75.0" text="Keterangan" />
+               <TableColumn prefWidth="75.0" text="Aksi" />
+           </columns>
+            <opaqueInsets>
+               <Insets />
+            </opaqueInsets>
+            <VBox.margin>
+               <Insets bottom="20.0" left="20.0" right="20.0" />
+            </VBox.margin>
+            <columnResizePolicy>
+               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+            </columnResizePolicy>
+         </TableView>
         </children>
     </VBox>
 </HBox>
