--- a/src/main/resources/views/pages/admin/ta/daftar-permintaan-verifikasi.fxml
+++ b/src/main/resources/views/pages/admin/ta/daftar-permintaan-verifikasi.fxml
@@ -7,15 +7,15 @@
 <?import javafx.scene.text.*?>
 
 <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="700.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.pages.admin.ta.PermintaanVerifAllController">
-    <fx:include source="../../components/adminta/sidebar.fxml" />
+    <fx:include source="../../../components/admin/ta/sidebar.fxml" />
     <VBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="700.0" HBox.hgrow="ALWAYS">
         <children>
-            <fx:include source="../../components/admin/topbar.fxml" />
+            <fx:include source="../../../components/admin/topbar.fxml" />
             <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="200.0">
                 <children>
                     <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                         <image>
-                            <Image url="@../../../img/arrow-left-square.png" />
+                            <Image url="@../../../../img/arrow-left-square.png" />
                         </image>
                         <HBox.margin>
                             <Insets right="20.0" />
@@ -46,7 +46,7 @@
                </VBox>
             </children>
          </HBox>
-            <TableView fx:id="tableViewBerkasPengajuan" stylesheets="@../../../css/table-view.css" VBox.vgrow="ALWAYS">
+            <TableView fx:id="tableViewBerkasPengajuan" stylesheets="@../../../../css/table-view.css" VBox.vgrow="ALWAYS">
                 <columns>
                     <TableColumn fx:id="noCol" editable="false" prefWidth="75.0" text="No" />
                     <TableColumn fx:id="nimCol" editable="false" prefWidth="90.39996337890625" text="NIM" />
