--- a/src/main/resources/views/pages/admin/ta/daftar-permintaan-verifikasi.fxml
+++ b/src/main/resources/views/pages/admin/ta/daftar-permintaan-verifikasi.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="700.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.pages.admin.ta.PermintaanVerifAllController">
+<HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="700.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.pages.admin.ta.DaftarPermintaanVerifikasiController">
     <fx:include source="../../../components/admin/ta/sidebar.fxml" />
     <VBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="700.0" HBox.hgrow="ALWAYS">
         <children>
@@ -44,27 +44,17 @@
                         </font></Label>
                   </children>
                </VBox>
+               <BorderPane prefHeight="200.0" prefWidth="200.0" />
             </children>
          </HBox>
-            <TableView fx:id="tableViewBerkasPengajuan" stylesheets="@../../../../css/table-view.css" VBox.vgrow="ALWAYS">
-                <columns>
-                    <TableColumn fx:id="noCol" editable="false" prefWidth="75.0" text="No" />
-                    <TableColumn fx:id="nimCol" editable="false" prefWidth="90.39996337890625" text="NIM" />
-                    <TableColumn fx:id="mahasiswaCol" editable="false" prefWidth="136.00003051757812" text="Mahasiswa" />
-                    <TableColumn fx:id="statusCol" editable="false" prefWidth="136.00003051757812" sortable="false" text="Status" />
-                    <TableColumn fx:id="tanggalCol" editable="false" minWidth="-1.0" prefWidth="-1.0" text="Tanggal Pengajuan" />
-                    <TableColumn fx:id="actionCol" editable="false" prefWidth="64.0" sortable="false" text="Aksi" />
-                </columns>
-                <opaqueInsets>
-                    <Insets />
-                </opaqueInsets>
-                <VBox.margin>
-                    <Insets bottom="20.0" left="20.0" right="20.0" top="10.0" />
-                </VBox.margin>
-                <columnResizePolicy>
-                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                </columnResizePolicy>
-            </TableView>
+         <BorderPane maxHeight="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+            <center>
+                  <fx:include fx:id="tabelPengajuan" source="../../../components/admin/tabel-pengajuan.fxml" VBox.vgrow="ALWAYS" />
+            </center>
+            <VBox.margin>
+               <Insets bottom="20.0" left="20.0" right="20.0" top="10.0" />
+            </VBox.margin>
+         </BorderPane>
         </children>
     </VBox>
 </HBox>
