--- a/src/main/resources/views/pages/admin/ta/dashboard.fxml
+++ b/src/main/resources/views/pages/admin/ta/dashboard.fxml
@@ -116,25 +116,14 @@
                <Insets left="20.0" right="20.0" top="30.0" />
             </VBox.margin>
          </HBox>
-            <TableView fx:id="tableViewBerkasPengajuan" stylesheets="@../../../../css/table-view.css" VBox.vgrow="ALWAYS">
-                <columns>
-                    <TableColumn fx:id="noCol" editable="false" prefWidth="75.0" text="No" />
-                    <TableColumn fx:id="nimCol" editable="false" prefWidth="90.39996337890625" text="NIM" />
-                    <TableColumn fx:id="mahasiswaCol" editable="false" prefWidth="136.00003051757812" text="Mahasiswa" />
-                    <TableColumn fx:id="statusCol" editable="false" prefWidth="136.00003051757812" sortable="false" text="Status" />
-                    <TableColumn fx:id="tanggalCol" editable="false" minWidth="-1.0" prefWidth="-1.0" text="Tanggal Pengajuan" />
-                    <TableColumn fx:id="actionCol" editable="false" prefWidth="64.0" sortable="false" text="Aksi" />
-                </columns>
-                <opaqueInsets>
-                    <Insets />
-                </opaqueInsets>
-                <VBox.margin>
-                    <Insets bottom="20.0" left="20.0" right="20.0" top="10.0" />
-                </VBox.margin>
-                <columnResizePolicy>
-                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                </columnResizePolicy>
-            </TableView>
+         <BorderPane maxHeight="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+            <center>
+                  <fx:include fx:id="tabelPengajuan" source="../../../components/admin/tabel-pengajuan.fxml" />
+            </center>
+            <VBox.margin>
+               <Insets bottom="20.0" left="20.0" right="20.0" top="10.0" />
+            </VBox.margin>
+         </BorderPane>
         </children>
     </VBox>
 </HBox>
